--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,5 @@
 Options +Indexes
-Header set Access-Control-Allow-Origin "*"
+
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
