--- a/.htaccess
+++ b/.htaccess
@@ -5,4 +5,5 @@ RewriteEngine On
 RewriteCond %{REQUEST_URI} !^.*\.html$
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.json -f
 RewriteRule ^(.*)$ %{REQUEST_FILENAME}.json
