Ad mcda-commands

--- a/commands/mcdaUpdateProject.json
+++ b/commands/mcdaUpdateProject.json
@@ -9,7 +9,7 @@
     },
     "message_name": {
       "type": "string",
-      "pattern": "^createToolInstance$"
+      "pattern": "^mcdaUpdateProject$"
     },
     "metadata": {
       "type": "object"
@@ -21,29 +21,13 @@
           "type": "string",
           "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$"
         },
-        "tool": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string",
-          "minLength": 3,
-          "maxLength": 255
-        },
-        "description": {
-          "type": "string"
-        },
-        "data": {},
-        "public": {
-          "type": "boolean"
+        "data": {}
         }
       },
+      "additionalProperties": false,
       "required": [
         "id",
-        "tool",
-        "name",
-        "description",
-        "public",
-        "data"
+        "criterion"
       ]
     }
   },
