--- a/commands/mcdaUpdateProject.json
+++ b/commands/mcdaUpdateProject.json
@@ -26,7 +26,7 @@
       "additionalProperties": false,
       "required": [
         "id",
-        "criterion"
+        "data"
       ]
     }
   },
