--- a/src/docker/nginx/nginx.conf
+++ b/src/docker/nginx/nginx.conf
@@ -3,8 +3,17 @@ server {
     listen       8080;
     server_name  localhost;
     location / {
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Max-Age' 1728000 always;
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+        autoindex on;
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
+        index  index.html;
+        try_files $uri $uri.json $uri/ =404;
     }
 }
